adressed sonar issues